# open-r

./: Dockerfile  Dockerfile.01  Dockerfile.bazel  README.md
appie-210a/: README.md
appie-210a/OPEN-R/APP/: VERSION
appie-210a/OPEN-R/APP/CONF/: CONNECT.CFG  CORRELAT.CFG  EMOCCC.CFG  EMOSEM.CFG  GEN.CFG  INSCCC.CFG  INSSEM.CFG  OBJECT.CFG
appie-210a/OPEN-R/APP/DATA/E/: EMPE.EPE
appie-210a/OPEN-R/APP/DATA/P/: AWAKING.CFG  GVAR  IEG.CFG  RHAPSODY
appie-210a/OPEN-R/APP/PC/: ALIAS.ADA
appie-210a/OPEN-R/APP/PC/PHOTO/: IMG00000.APH  IMG00001.APH
appie-210a/OPEN-R/APP/PC/SLOG/: LOG00  LOG01  LOG02  LOG03  LOG04  LOG05  LOG06  LOG07  LOG08  LOG09  LOG11  LOG12  LOG13  LOG14  LOG15  LOG16  LOG17  LOG18  LOG19  LOG20  LOG21  LOG22  LOG23  LOG24  LOG25  LOG26  LOG27  LOG28  LOG29  LOG30  LOG31  LOG32  LOG33  LOG34  LOG35  LOG36  LOG37  LOG38
appie-210a/OPEN-R/MW/CONF/: CNTVER.OIF  CONNECT.CFG  DESIGN.CFG  DESIGNDB.CFG  ERS-210.MWC  OBJECT.CFG  SERVICE.CFG
appie-210a/OPEN-R/MW/DATA/E/: SYSAUDIO.ODA  SYSLED.ODA  SYSMTN.ODA
appie-210a/OPEN-R/SYSTEM/DATA/P/: AIBO-ID
appie-7/: README.md
contemplation/: README.md
r-code-plugin/: README.md
r-code-plugin/sample/RPlugIn/: README.md
sample/common/BattChecker/: Makefile
sample/common/BattChecker/BattChecker/robot/: Makefile
sample/common/BattChecker/RP/robot/: Makefile
sdk/: README.md
upgrade-210/: README.md  README_J.txt
upgrade-210/OPEN-R/OTHERS/FLUPDT/: ABK151.FRC  ABK151RA.FRC  ABKVERS.CFG  FLVERS.CFG
upgrade-210/OPEN-R/OTHERS/RECOVERY/: BOOTPARA
upgrade-210/OPEN-R/SYSTEM/CONF/: OBJECT.CFG
(+157 files in other folders)
